feat: add slider

--- a/singolo1.html
+++ b/singolo1.html
@@ -20,6 +20,26 @@
           </ul>
         </nav>
       </header>
+      <section class="slider">
+        <span class="slider-left"></span>
+        <div class="vertical-phone">
+          <div class="vertical-photo-slide">
+            <img
+              src="assets/images/Vertical-imgpng.png"
+              alt="iPhone-Vertical"
+            />
+          </div>
+        </div>
+        <div class="horizontal-phone">
+          <div class="horizontal-photo-slide">
+            <img
+              src="assets/images/Horizontal-img.png"
+              alt="iPhone-Horizontal"
+            />
+          </div>
+        </div>
+        <span class="slider-right"></span>
+      </section>
     </div>
   </body>
 </html>
