--- a/singolo1.html
+++ b/singolo1.html
@@ -40,6 +40,90 @@
         </div>
         <span class="slider-right"></span>
       </section>
+      <article class="services">
+        <h2>Our Services</h2>
+        <p>
+          Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+          Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
+          lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+          tortor mauris condimentum nibh.
+        </p>
+
+        <div class="services-grid">
+          <div class="services-grid-item">
+            <div class="services-icon">
+              <img src="assets/images/Pen.png" alt="Pen icon" />
+            </div>
+            <div class="services-description">
+              <h3>Custom Design</h3>
+              <p>
+                Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
+                laoreet, viverra lacus ut, ultrices velit.
+              </p>
+            </div>
+          </div>
+          <div class="services-grid-item">
+            <div class="services-icon">
+              <img src="assets/images/Bulb.png" alt="Bulb icon" />
+            </div>
+            <div class="services-description">
+              <h3>Inovative Ideas</h3>
+              <p>
+                Quisque luctus, quam eget molestie commodo, lacus purus cursus
+                purus, nec rutrum tellus dolor id lorem.
+              </p>
+            </div>
+          </div>
+          <div class="services-grid-item">
+            <div class="services-icon">
+              <img src="assets/images/Heart.png" alt="Heart icon" />
+            </div>
+            <div class="services-description">
+              <h3>Love Is The Answer</h3>
+              <p>
+                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
+                turpis, et consequat felis. Quisque condimentum.
+              </p>
+            </div>
+          </div>
+          <div class="services-grid-item">
+            <div class="services-icon">
+              <img src="assets/images/Phone.png" alt="Phone icon" />
+            </div>
+            <div class="services-description">
+              <h3>Responsive Layout</h3>
+              <p>
+                Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas
+                blandit nunc ligula. Praesent elit leo.
+              </p>
+            </div>
+          </div>
+          <div class="services-grid-item">
+            <div class="services-icon">
+              <img src="assets/images/Bubble.png" alt="Bubble icon" />
+            </div>
+            <div class="services-description">
+              <h3>24 / 7 Support</h3>
+              <p>
+                Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi.
+                Nulla a sem erat. Pellentesque egestas venenatis lorem .
+              </p>
+            </div>
+          </div>
+          <div class="services-grid-item">
+            <div class="services-icon">
+              <img src="assets/images/Star.png" alt="Star icon" />
+            </div>
+            <div class="services-description">
+              <h3>Feel Like A Star</h3>
+              <p>
+                Quisque hendrerit purus dapibus, ornare nibh vitae, viverra
+                nibh. Fusce vitae aliquam tellus.
+              </p>
+            </div>
+          </div>
+        </div>
+      </article>
     </div>
   </body>
 </html>
