styles: add uppercase for logo and navigation

--- a/singolo1.html
+++ b/singolo1.html
@@ -11,11 +11,11 @@
       <a href="#" class="logo">SINGOLO</a>
       <nav class="header__navigation">
         <ul class="navigation">
-          <li class="navigation__link active"><a href="#">HOME</a></li>
-          <li class="navigation__link"><a href="#">SERVICES</a></li>
-          <li class="navigation__link"><a href="#">PORTFOLIO</a></li>
-          <li class="navigation__link"><a href="#">ABOUT</a></li>
-          <li class="navigation__link"><a href="#">CONTACT</a></li>
+          <li class="navigation__link active"><a href="#">home</a></li>
+          <li class="navigation__link"><a href="#">services</a></li>
+          <li class="navigation__link"><a href="#">portfolio</a></li>
+          <li class="navigation__link"><a href="#">about</a></li>
+          <li class="navigation__link"><a href="#">contact</a></li>
         </ul>
       </nav>
     </header>
