--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
         </nav>
       </header>
 
-      <section class="carousel-padding" id="home">
-      <div class="carousel">
-        <span class="carousel__control carousel__control--prev"></span>
-        <div class="slider">
+      <section class="slider" id="home">
+          <span class="slider__control slider__control--prev"></span>
           <div class="slider__wrapper">
-            <div class="slider__item carousel__item-1">
+            <div class="slider__item slider__item-1">
               <div class="phone phone--vertical">
                 <div class="item item--vertical item--active">
                   <img class="phone-image" src="assets/images/Vertical-imgpng.png" data-image="assets/images/Vertical-imgpng.png" data-black="assets/images/Vertical-black.png" alt="iPhone-Vertical" />
@@ -42,7 +40,8 @@
                 <span class="phone-btn-2"></span>
               </div>
             </div>
-            <div class="slider__item carousel__item-2">
+
+            <div class="slider__item slider__item-2">
               <div class="phone phone--1 phone--vertical">
                 <div class="item item--vertical item--active">
                   <img class="phone-image" src="assets/images/Vertical-imgpng.png" data-image="assets/images/Vertical-imgpng.png" data-black="assets/images/Vertical-black.png" alt="iPhone-Vertical" />
@@ -63,11 +62,9 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <span class="carousel__control carousel__control--next"></span>
-      </div>
+          <span class="slider__control slider__control--next"></span>
       </section>
+
       <section class="services" id="services">
         <div class="wrapper">
           <h2 class="services__title">Our Services</h2>
@@ -78,7 +75,7 @@
             tortor mauris condimentum nibh.
           </p>
 
-          <div class="layout-3-column marginTop54">
+          <div class="services__list">
             <div class="service">
               <div class="service__icon">
                 <img src="assets/images/Pen.png" alt="Pen icon" />
@@ -154,8 +151,9 @@
           </div>
         </div>
       </section>
+
       <section class="portfolio" id="portfolio">
-        <div class="wrapper-with-padding">
+        <div class="wrapper">
           <h2 class="portfolio__title title">Portfolio</h2>
           <p class="portfolio__description description">
             Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget
@@ -169,7 +167,7 @@
           </div>
           </div>
           <div class="wrapper">
-          <div class="layout-3-column marginTop20 work__container">
+          <div class="work__container">
             <article class="work">
               <img class="work__image" src="assets/images/2/1.png" alt="work" />
             </article>
@@ -211,7 +209,7 @@
       </section>
       
       <section class="about-us" id="about">
-        <div class="wrapper-with-padding">
+        <div class="wrapper">
           <h2 class="about-us__title title">About Us</h2>
           <p class="about-us__description description">
             Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
@@ -220,7 +218,7 @@
             mauris condimentum nibh.
           </p>
       
-          <div class="layout-3-column marginTop21">
+          <div class="employer__list">
             <article class="employer">
               <img class="employer__image" src="assets/images/2/Adam_Jensen.png" alt="Adam Jensen" />
               <h3 class="employer__name">Adam Jensen</h3>
@@ -315,7 +313,7 @@
           </div>
       </section>
       <section class="contact" id="contact">
-        <div class="wrapper-with-padding">
+        <div class="wrapper">
           <h2 class="contact__title title">Get a Quote</h2>
           <p class="contact__description description">
             Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
@@ -324,7 +322,7 @@
             tortor mauris condimentum nibh.
           </p>
         </div>
-        <div class="wrapper-no-paddings">
+        <div class="wrapper">
           <div class="contacts__container">
             <div class="contacts__form">
               <form action="#" method="post" class="contacts-form">
