feat: task responsive done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="layout">
       <header class="header">
+        <input type="checkbox" class="toggle" id="thing"><label for="thing"></label>
         <h1 class="logo"><a href="#">SINGOLO</a></h1>
         <nav class="header__navigation">
           <ul class="navigation">
